--- a/sound/soc/bcm/Kconfig
+++ b/sound/soc/bcm/Kconfig
@@ -189,6 +189,12 @@ config SND_BCM2708_SOC_ALLO_DIGIONE
 	help
 	  Say Y or M if you want to add support for Allo DigiOne.
 
+config SND_BCM2708_SOC_TPA_HERMES_RPI
+	tristate "Support for TPA Hermes-RPi"
+	depends on SND_BCM2708_SOC_I2S || SND_BCM2835_SOC_I2S
+	help
+	  Say Y or M if you want to add support for TPA Hermes-RPi.
+
 config SND_PISOUND
 	tristate "Support for Blokas Labs pisound"
 	depends on SND_BCM2708_SOC_I2S || SND_BCM2835_SOC_I2S
